[bugfix/HD-50] Refactor
