# src/main/java/vn/novahub/helpdesk/config/RequestsNeedAuthencationToken.java
@@ -53,16 +53,16 @@ public class RequestsNeedAuthencationToken {
             requestArrayList.add(new Request("\\/api\\/admin\\/day-offs", new String[]{Method.GET.name(), Method.POST.name()}));
             requestArrayList.add(new Request("\\/api\\/admin\\/day-offs\\/(\\d+)", new String[]{Method.GET.name(), Method.PUT.name(), Method.DELETE.name()}));
 
-            // day-of-type
-            requestArrayList.add(new Request("\\/api\\/day-off-types", new String[]{Method.POST.name(), Method.PUT.name(), Method.GET.name()}));
-            requestArrayList.add(new Request("\\/api\\/day-off-types\\/(\\d+)", new String[]{Method.GET.name(), Method.DELETE.name()}));
-            requestArrayList.add(new Request("\\/api\\/admin\\/day-off-types\\/(\\d+)", new String[]{Method.GET.name(), Method.DELETE.name()}));
-            requestArrayList.add(new Request("\\/api\\/admin\\/day-off-types", new String[]{Method.POST.name(), Method.PUT.name(), Method.GET.name()}));
+            // account-has-day-of-type
+            requestArrayList.add(new Request("\\/api\\/account-has-day-off-types", new String[]{Method.POST.name(), Method.PUT.name(), Method.GET.name()}));
+            requestArrayList.add(new Request("\\/api\\/account-has-day-off-types\\/(\\d+)", new String[]{Method.GET.name(), Method.DELETE.name()}));
+            requestArrayList.add(new Request("\\/api\\/admin\\/account-has-day-off-types\\/(\\d+)", new String[]{Method.GET.name(), Method.DELETE.name()}));
+            requestArrayList.add(new Request("\\/api\\/admin\\/account-has-day-off-types", new String[]{Method.POST.name(), Method.PUT.name(), Method.GET.name()}));
 
-            // common-day-off-type
-            requestArrayList.add(new Request("\\/api\\/common-day-off-types", new String[]{Method.GET.name(), Method.DELETE.name()}));
-            requestArrayList.add(new Request("\\/api\\/common-day-off-types\\/(\\d+)", new String[]{Method.GET.name(), Method.DELETE.name()}));
-            requestArrayList.add(new Request("\\/api\\/admin\\/common-day-off-types", new String[]{Method.POST.name(), Method.PUT.name(), Method.GET.name()}));
+            // day-off-type
+            requestArrayList.add(new Request("\\/api\\/day-off-types", new String[]{Method.GET.name(), Method.DELETE.name()}));
+            requestArrayList.add(new Request("\\/api\\/day-off-types\\/(\\d+)", new String[]{Method.GET.name(), Method.DELETE.name()}));
+            requestArrayList.add(new Request("\\/api\\/admin\\/day-off-types", new String[]{Method.POST.name(), Method.PUT.name(), Method.GET.name()}));
 
 
         }
