# src/main/java/vn/novahub/helpdesk/model/CommonDayOffType.java
@@ -1,43 +1,0 @@
-package vn.novahub.helpdesk.model;
-
-import javax.persistence.*;
-
-@Entity
-@Table(name = "common_day_off_type")
-public class CommonDayOffType {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @Column(name = "id")
-    private int id;
-
-    @Column(name = "type")
-    private String type;
-
-    @Column(name = "quota")
-    private int quota;
-
-    public int getId() {
-        return id;
-    }
-
-    public void setId(int id) {
-        this.id = id;
-    }
-
-    public String getType() {
-        return type;
-    }
-
-    public void setType(String type) {
-        this.type = type;
-    }
-
-    public int getQuota() {
-        return quota;
-    }
-
-    public void setQuota(int quota) {
-        this.quota = quota;
-    }
-}
