# src/main/java/vn/novahub/helpdesk/model/DayOffType.java
@@ -1,7 +1,5 @@
 package vn.novahub.helpdesk.model;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
-
 import javax.persistence.*;
 
 @Entity
@@ -11,107 +9,35 @@ public class DayOffType {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id")
-    private long id;
+    private int id;
 
-    @Column(name = "year")
-    private int year;
+    @Column(name = "type")
+    private String type;
 
-    @Column(name = "private_quota")
-    private int privateQuota;
+    @Column(name = "defaultQuota")
+    private int defaultQuota;
 
-    @Column(name = "remaining_time")
-    private int remainingTime;
-
-    @Column(name = "common_type_id")
-    private int commonTypeId;
-
-    @Column(name = "account_id")
-    private long accountId;
-
-    @ManyToOne(fetch = FetchType.EAGER, targetEntity = CommonDayOffType.class)
-    @JoinColumn(name = "common_type_id", insertable = false, updatable = false)
-    private CommonDayOffType commonDayOffType;
-
-    @JsonIgnore
-    @ManyToOne(fetch = FetchType.LAZY, targetEntity = Account.class)
-    @JoinColumn(name = "account_id", insertable = false, updatable = false)
-    private Account account;
-
-    public void subtractRemainingTime(int numberOfDayOff) {
-        this.remainingTime = this.remainingTime - numberOfDayOff;
-    }
-
-    public long getId() {
+    public int getId() {
         return id;
     }
 
-    public void setId(long id) {
+    public void setId(int id) {
         this.id = id;
     }
 
-    public int getRemainingTime() {
-        return remainingTime;
+    public String getType() {
+        return type;
     }
 
-    public void setRemainingTime(int remainingTime) {
-        this.remainingTime = remainingTime;
+    public void setType(String type) {
+        this.type = type;
     }
 
-    public int getYear() {
-        return year;
+    public int getDefaultQuota() {
+        return defaultQuota;
     }
 
-    public void setYear(int year) {
-        this.year = year;
-    }
-
-    public int getPrivateQuota() {
-        return privateQuota;
-    }
-
-    public void setPrivateQuota(int privateQuota) {
-        this.privateQuota = privateQuota;
-    }
-
-    public int getCommonTypeId() {
-        return commonTypeId;
-    }
-
-    public void setCommonTypeId(int commonTypeId) {
-        this.commonTypeId = commonTypeId;
-    }
-
-    public CommonDayOffType getCommonDayOffType() {
-        return commonDayOffType;
-    }
-
-    public void setCommonDayOffType(CommonDayOffType commonDayOffType) {
-        this.commonDayOffType = commonDayOffType;
-    }
-
-    public Account getAccount() {
-        return account;
-    }
-
-    public void setAccount(Account account) {
-        this.account = account;
-    }
-
-    public long getAccountId() {
-        return accountId;
-    }
-
-    public void setAccountId(long accountId) {
-        this.accountId = accountId;
-    }
-
-    @Override
-    public String toString() {
-        return "DayOffType{" +
-                "id=" + id +
-                ", year=" + year +
-                ", remainingTime=" + remainingTime +
-                ", accountId=" + accountId +
-                '}';
+    public void setDefaultQuota(int defaultQuota) {
+        this.defaultQuota = defaultQuota;
     }
 }
